# ImageSteganography

./: .gitignore  README.md  bootstrap.py  config.toml  gui.py  linux_setup.sh  main.py  pyproject.toml  setup.py  test_verification.py  verification.py  windows_setup.ps1
src/core/: StegoService.py
src/formats/: bmp_backend.py  jpeg_backend.py  png_backend.py  tiff_backend.py
src/imagesteganography/UX/: gui.py  gui_backend_bridge.py
src/imagesteganography/cli/: cli.py
src/imagesteganography/core/: ImageStegoBackend.py  LsbMixin.py  StegoService.py
src/imagesteganography/formats/: bmp_backend.py  jpeg_backend.py  png_backend.py  tiff_backend.py
src/imagesteganography/utilities/: ImageFormat.py  StegoBackendFactory.py  config.py  crypto.py  logger.py
src/utilities/: ImageFormat.py  StegoBackendFactory.py  logger.py
src/utilitis/: logger.py
tests/: test_verification.py
